--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@ tr:nth-child(even) {
     <th>Application</th>
     <th>Tested by (discord user)</th>
     <th>Download link</th>
+    <th>Other info</th>
   </tr>
   <tr>
     <td>Microsoft Teams</td>
     <td>Oreki#6575</td>
     <td><a href="https://statics.teams.cdn.office.net/production-windows-arm64/1.3.00.26064/Teams_windows_arm64.exe">Download</a></td>
+    <td>It may crash when you first install it. If that happens, reboot and in task manager disable automatic run.</td>
   </tr>
 </table>
 
