--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>WoR ARM Applications</title>
 <style>
 table {
   font-family: arial, sans-serif;
@@ -32,9 +33,39 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Microsoft Teams</td>
-    <td>Oreki#6575</td>
-    <td><a href="https://statics.teams.cdn.office.net/production-windows-arm64/1.3.00.26064/Teams_windows_arm64.exe">Download</a></td>
+    <td>SuperPou1#8132</td>
+    <td><a href="https://statics.teams.cdn.office.net/production-windows-arm64/1.3.00.26064/Teams_windows_arm64.exe" target="_blank">Download</a></td>
     <td>It may crash when you first install it. If that happens, reboot and in task manager disable automatic run.</td>
+  </tr>
+  <tr>
+    <td>Visual Studio Code</td>
+    <td>mkchx#8382</td>
+    <td><a href="https://code.visualstudio.com/Download" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>CC Cleaner</td>
+    <td>djdoolky76#7797</td>
+    <td><a href="https://www.ccleaner.com/ccleaner/download" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Kodi</td>
+    <td>mariob#3545</td>
+    <td><a href="http://ftp.igh.cnrs.fr/pub/xbmc/xbmc/nightlies/windows/uwp-arm/master/" target="_blank">Download</a></td>
+    <td>Really buggy</td>
+  </tr>
+  <tr>
+    <td>Skype</td>
+    <td>djdoolky76#7797</td>
+    <td><a href="https://www.skype.com/en/get-skype/" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Python</td>
+    <td>finniedj.exe#9075</td>
+    <td><a href="https://github.com/jay0lee/CPython-Windows-ARM64/releases/download/3.8.5-1/Python-3.8.5-Windows-ARM64.zip" target="_blank">Download</a></td>
+    <td>Version 3.8.5</td>
   </tr>
 </table>
 
