--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<h2>My Customers</h2>
+<h2>WoR ARM Applications</h2>
 
 <input type="text" id="searchbox" onkeyup="search()" placeholder="Search.." title="Search for applications">
 
