--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-#myInput {
+#searchbox {
   background-image: url('/searchicon.png');
   background-position: 10px 10px;
   background-repeat: no-repeat;
@@ -19,23 +19,23 @@
   margin-bottom: 12px;
 }
 
-#myTable {
+#apptable {
   border-collapse: collapse;
   width: 100%;
   border: 1px solid #ddd;
   font-size: 18px;
 }
 
-#myTable th, #myTable td {
+#apptable th, #myTable td {
   text-align: left;
   padding: 12px;
 }
 
-#myTable tr {
+#apptable tr {
   border-bottom: 1px solid #ddd;
 }
 
-#myTable tr.header, #myTable tr:hover {
+#apptable tr.header, #myTable tr:hover {
   background-color: #f1f1f1;
 }
 </style>
