--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
     <td><a href="https://github.com/jay0lee/CPython-Windows-ARM64/releases/download/3.8.5-1/Python-3.8.5-Windows-ARM64.zip" target="_blank">Download</a></td>
     <td>Version 3.8.5</td>
   </tr>
+  <tr>
+    <td>HEC-DSSVue</td>
+    <td>Jason.Chin#5500</td>
+    <td><a href="https://www.hec.usace.army.mil/software/hec-dssvue/" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
 </table>
 
 <script>
