--- a/index.html
+++ b/index.html
@@ -95,6 +95,24 @@
     <td><a href="https://www.hec.usace.army.mil/software/hec-dssvue/" target="_blank">Download</a></td>
     <td></td>
   </tr>
+  <tr>
+    <td>Citrix Workspace</td>
+    <td>wauske#1205</td>
+    <td><a href="https://www.microsoft.com/nl-nl/p/citrix-workspace/9wzdncrfj2kj?activetab=pivot:regionofsystemrequirementstab" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Npcap</td>
+    <td>rookieone#5944</td>
+    <td><a href="https://github.com/nmap/npcap/issues/57#issuecomment-491333512" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Notepad++</td>
+    <td>djdoolky76#7797</td>
+    <td><a href="./WoR-ARM-applications/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
 </table>
 
 <script>
