--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
     <td><a href="./WoR-ARM-applications/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
     <td></td>
   </tr>
+  <tr>
+    <td>Putty</td>
+    <td></td>
+    <td><a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html" target="_blank">Download</a></td>
+    <td>ARM32 and ARM64 at the bottom of the download page.</td>
+  </tr>
 </table>
 
 <script>
