--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 }
 
 #searchbox {
-  background-image: url('./WoR-ARM-applications/searchicon.png');
+  background-image: url('./searchicon.png');
   background-position: 10px 10px;
   background-repeat: no-repeat;
   width: 100%;
