--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </tr>
   <tr>
     <td>Putty</td>
-    <td></td>
+    <td>jftacnik#1428</td>
     <td><a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html" target="_blank">Download</a></td>
     <td>ARM32 and ARM64 at the bottom of the download page.</td>
   </tr>
