--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   border-bottom: 1px solid #ddd;
 }
 
-#apptable tr.header, #myTable tr:hover {
+#apptable tr.header, #apptable tr:hover {
   background-color: #f1f1f1;
 }
 </style>
@@ -111,7 +111,7 @@
   <tr>
     <td>Notepad++</td>
     <td>djdoolky76#7797</td>
-    <td><a href="./WoR-ARM-applications/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
+    <td><a href="./WoR-ARM-applications/binaries/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
     <td></td>
   </tr>
   <tr>
