--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <tr>
     <td>Notepad++</td>
     <td>djdoolky76#7797</td>
-    <td><a href="./WoR-ARM-applications/binaries/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
+    <td><a href="./binaries/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
     <td></td>
   </tr>
   <tr>
