--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
     <td><a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html" target="_blank">Download</a></td>
     <td>ARM32 and ARM64 at the bottom of the download page.</td>
   </tr>
+  <tr>
+    <td>Dism++</td>
+    <td>AI LIFE#4798</td>
+    <td><a href="https://www.chuyu.me/en/index.html" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
 </table>
 
 <script>
