--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <td></td>
   </tr>
 </table>
-
+  <h3>More links:<br><a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br><a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a></h3>
 <script>
 function search() {
   var input, filter, table, tr, td, i, txtValue;
