--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
     <td><a href="https://www.chuyu.me/en/index.html" target="_blank">Download</a></td>
     <td></td>
   </tr>
+  <tr>
+    <td>Windows Subsystem for Linux</td>
+    <td>rookieone#5944</td>
+    <td><a href="https://docs.microsoft.com/en-us/windows/wsl/install-win10" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Sysinternal tools</td>
+    <td>rookieone#5944</td>
+    <td><a href="https://docs.microsoft.com/en-us/sysinternals/" target="_blank">Download</a></td>
+    <td></td>
+  </tr>
 </table>
   <h3>More links:<br><a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br><a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a></h3>
 <script>
