--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
     <td><a href="https://docs.microsoft.com/en-us/sysinternals/" target="_blank">Download</a></td>
     <td></td>
   </tr>
+  <tr>
+    <td>OpenRCT2</td>
+    <td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
+    <td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/openrct2/OpenRCT2-0.2.4-windows-arm64.zip" target="_blank">Download</a></td>
+    <td>Version 0.2.4 ARM64</td>
+  </tr>
+  <tr>
+    <td>OpenTTD</td>
+    <td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
+    <td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/openttd/openttd-1.10.0-beta1-windows-arm64.zip" target="_blank">Download</a></td>
+    <td>Version 1.10.0 ARM64</td>
+  </tr>
 </table>
   <h3>More links:<br><a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br><a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a></h3>
 <script>
