--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <td>Notepad++</td>
     <td>djdoolky76#7797</td>
     <td><a href="./binaries/npp.7.8.8.Installer.exe" target="_blank">Download</a></td>
-    <td></td>
+    <td>May not get regular updates</td>
   </tr>
   <tr>
     <td>Putty</td>
@@ -129,13 +129,25 @@
     <td>OpenRCT2</td>
     <td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
     <td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/openrct2/OpenRCT2-0.2.4-windows-arm64.zip" target="_blank">Download</a></td>
-    <td>Version 0.2.4 ARM64</td>
+    <td>Version 0.2.4 ARM64 May not get regular updates</td>
   </tr>
   <tr>
     <td>OpenTTD</td>
     <td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
     <td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/openttd/openttd-1.10.0-beta1-windows-arm64.zip" target="_blank">Download</a></td>
-    <td>Version 1.10.0 ARM64</td>
+    <td>Version 1.10.0 ARM64 May not get regular updates</td>
+  </tr>
+  <tr>
+    <td>ScummVM</td>
+    <td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
+    <td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/scummvm/scummvm-git-20200514.zip" target="_blank">Download</a></td>
+    <td>May not get regular updates</td>
+  </tr>
+  <tr>
+    <td>Bandizip</td>
+    <td><a href='https://bandisoft.com'>Bandisoft</a></td>
+    <td><a href="https://en.bandisoft.com/bandizip/" target="_blank">Download</a></td>
+    <td>Supported by original developers</td>
   </tr>
 </table>
   <h3>More links:<br><a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br><a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a></h3>
