--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <td>Supported by original developers</td>
   </tr>
 </table>
-  <h3>More links:<br><a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br><a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a><br><a href='https://www.reddit.com/r/Surface/comments/dcnpzw/arm_applications/'>ARM Applications for Windows - Reddit</a></h3>
+  <h3>More links:<br>• <a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br>• <a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a><br>• <a href='https://www.reddit.com/r/Surface/comments/dcnpzw/arm_applications/'>ARM Applications for Windows - Reddit</a></h3>
 <script>
 function search() {
   var input, filter, table, tr, td, i, txtValue;
