--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
     <td><a href="https://en.bandisoft.com/bandizip/" target="_blank">Download</a></td>
     <td>Supported by original developers</td>
   </tr>
+  <tr>
+    <td>VLC</td>
+    <td><a href='https://videolan.org'>Videolan</a></td>
+    <td><a href="http://people.videolan.org/~jb/Builds/ARM/vlc-4.0.0-dev-20180508-aarch64.zip" target="_blank">Download</a></td>
+    <td>Supported by original developers</td>
+  </tr>
 </table>
   <h3>More links:<br>• <a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br>• <a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a><br>• <a href='https://www.reddit.com/r/Surface/comments/dcnpzw/arm_applications/'>ARM Applications for Windows - Reddit</a></h3>
 <script>
