--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   font-size: 18px;
 }
 
-#apptable th, #myTable td {
+#apptable th, #apptable td {
   text-align: left;
   padding: 12px;
 }
@@ -47,7 +47,7 @@
 <input type="text" id="searchbox" onkeyup="search()" placeholder="Search.." title="Search for applications">
 
 <table id="apptable">
-  <tr class="header">
+  <tr>
     <th>Application</th>
     <th>Tested by (discord user)</th>
     <th>Download link</th>
