--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <input type="text" id="searchbox" onkeyup="search()" placeholder="Search.." title="Search for applications">
 
 <table id="apptable">
-  <tr>
+  <tr class='header'>
     <th>Application</th>
     <th>Tested by (discord user)</th>
     <th>Download link</th>
