--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
   </tr>
   <tr>
 	<td>OpenRCT2</td>
-	<td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
+	<td>Untested</td>
 	<td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/openrct2/OpenRCT2-0.2.4-windows-arm64.zip" target="_blank">Download</a></td>
 	<td>Version 0.2.4 ARM64 May not get regular updates</td>
   </tr>
   <tr>
 	<td>Bandizip</td>
-	<td><a href='https://bandisoft.com'>Bandisoft</a></td>
+	<td>Untested</td>
 	<td><a href="https://en.bandisoft.com/bandizip/" target="_blank">Download</a></td>
 	<td>Supported by original developers</td>
   </tr>
 	<tr class="category"><th style="text-align:center" colspan="4">Web Browsers</th></tr>
 	<tr>
 	<td>Firefox</td>
-	<td><a href='https://www.mozilla.org/en-US/firefox/'>Bandisoft</a></td>
+	<td>Untested</td>
 	<td><a href="https://www.mozilla.org/en-US/firefox/all/#product-desktop-release" target="_blank">Download</a></td>
 	<td>Supported by original developers</td>
   </tr>
