--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
   <tr class="category"><th style="text-align:center" colspan="4">Games</th></tr>
   <tr>
 	<td>OpenTTD</td>
-	<td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
+	<td>Untested</td>
 	<td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/openttd/openttd-1.10.0-beta1-windows-arm64.zip" target="_blank">Download</a></td>
 	<td>Version 1.10.0 ARM64 May not get regular updates</td>
   </tr>
   <tr>
 	<td>ScummVM</td>
-	<td><a href='https://github.com/janisozaur'>Janisozaur</a></td>
+	<td>Untested</td>
 	<td><a href="https://github.com/janisozaur/arm64-binaries/raw/master/scummvm/scummvm-git-20200514.zip" target="_blank">Download</a></td>
 	<td>May not get regular updates</td>
   </tr>
@@ -123,7 +123,7 @@
   </tr>
   <tr>
 	<td>VLC</td>
-	<td><a href='https://videolan.org'>Videolan</a></td>
+	<td>Untested</td>
 	<td><a href="http://people.videolan.org/~jb/Builds/ARM/vlc-4.0.0-dev-20180508-aarch64.zip" target="_blank">Download</a></td>
 	<td>Supported by original developers</td>
   </tr>
