--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	<tr class="category"><th style="text-align:center" colspan="4">Web Browsers</th></tr>
 	<tr>
 	<td>Firefox</td>
-	<td>Untested</td>
+	<td>Reyansh_Khobragade#8031</td>
 	<td><a href="https://www.mozilla.org/en-US/firefox/all/#product-desktop-release" target="_blank">Download</a></td>
 	<td>Supported by original developers</td>
   </tr>
