--- a/index.html
+++ b/index.html
@@ -166,10 +166,16 @@
   </tr>
 	<tr class="category"><th style="text-align:center" colspan="4">Web Browsers</th></tr>
 	<tr>
-	<td>Firefox</td>
-	<td>Reyansh_Khobragade#8031</td>
+	<td>Chromium</td>
+	<td>Not sure</td>
 	<td><a href="https://www.mozilla.org/en-US/firefox/all/#product-desktop-release" target="_blank">Download</a></td>
 	<td>Supported by original developers</td>
+  </tr>
+	<tr>
+	<td>Firefox</td>
+	<td>Reyansh_Khobragade#8031</td>
+	<td><a href="https://chromium.woolyss.com/#windows-on-arm" target="_blank">Download</a></td>
+	<td>Chromium is the open source version of Chrome.</td>
   </tr>
 </table>
   <h3>More links:<br>• <a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br>• <a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a><br>• <a href='https://www.reddit.com/r/Surface/comments/dcnpzw/arm_applications/'>ARM Applications for Windows - Reddit</a></h3>
