--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 	<td>Chromium</td>
 	<td>Not sure</td>
 	<td><a href="https://www.mozilla.org/en-US/firefox/all/#product-desktop-release" target="_blank">Download</a></td>
-	<td>Supported by original developers</td>
+	<td>Chromium is the open source version of Chrome.</td>
   </tr>
 	<tr>
 	<td>Firefox</td>
 	<td>Reyansh_Khobragade#8031</td>
 	<td><a href="https://chromium.woolyss.com/#windows-on-arm" target="_blank">Download</a></td>
-	<td>Chromium is the open source version of Chrome.</td>
+	<td>Supported by original developers.</td>
   </tr>
 </table>
   <h3>More links:<br>• <a href="https://forum.xda-developers.com/showthread.php?t=2092348">Desktop apps ported to Windows RT</a><br>• <a href="https://github.com/janisozaur/arm64-binaries">Collection of Arm64 binaries for Windows</a><br>• <a href='https://www.reddit.com/r/Surface/comments/dcnpzw/arm_applications/'>ARM Applications for Windows - Reddit</a></h3>
