--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
 	<td><a href="https://en.bandisoft.com/bandizip/" target="_blank">Download</a></td>
 	<td>Supported by original developers</td>
   </tr>
+  <tr>
+	<td>Rufus</td>
+	<td>Den John#9995</td>
+	<td><a href="https://rufus.ie" target="_blank">Download</a></td>
+	<td>Supported by original developers.</td>
+  </tr>
 	<tr class="category"><th style="text-align:center" colspan="4">Web Browsers</th></tr>
 	<tr>
 	<td>Chromium</td>
